@@ -262,6 +262,7 @@ protected:
                         event
                         (
                             wxFSW_EVENT_WARNING,
+                            wxFSW_WARNING_GENERAL,
                             wxString::Format
                             (
                              _("Unexpected event for \"%s\": no "
@@ -285,8 +286,19 @@ protected:
         // check out for error/warning condition
         if (flags & wxFSW_EVENT_WARNING || flags & wxFSW_EVENT_ERROR)
         {
-            wxString errMsg = GetErrorDescription(nativeFlags);
-            wxFileSystemWatcherEvent event(flags, errMsg);
+            wxFSWWarningType warningType;
+            if ( flags & wxFSW_EVENT_WARNING )
+            {
+                warningType = nativeFlags & IN_Q_OVERFLOW
+                                ? wxFSW_WARNING_OVERFLOW
+                                : wxFSW_WARNING_GENERAL;
+            }
+            else // It's an error, not a warning.
+            {
+                warningType = wxFSW_WARNING_NONE;
+            }
+
+            wxFileSystemWatcherEvent event(flags, warningType);
             SendEvent(event);
             return;
         }
@@ -299,6 +311,7 @@ protected:
                 event
                 (
                     wxFSW_EVENT_WARNING,
+                    wxFSW_WARNING_GENERAL,
                     wxString::Format
                     (
                         _("Invalid inotify event for \"%s\""),
@@ -641,22 +654,6 @@ protected:
         // never reached
         wxFAIL_MSG(wxString::Format("Unknown inotify event mask %u", flags));
         return -1;
-    }
-
-    /**
-     * Returns error description for specified inotify mask
-     */
-    static const wxString GetErrorDescription(int flag)
-    {
-        switch ( flag )
-        {
-        case IN_Q_OVERFLOW:
-            return _("Event queue overflowed");
-        }
-
-        // never reached
-        wxFAIL_MSG(wxString::Format("Unknown inotify event mask %u", flag));
-        return wxEmptyString;
     }
 
     wxFSWSourceHandler* m_handler;        // handler for inotify event source
